--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "react-dom": "^17.0.1",
     "react-redux": "^7.2.3",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.3",
+    "react-scripts": "^4.0.3",
     "react-stripe-checkout": "^2.6.3",
     "redux": "^4.0.5",
     "redux-logger": "^3.0.6",
@@ -34,6 +34,8 @@
     "workbox-streams": "^5.1.3"
   },
   "scripts": {
+    "heroku-prebuild": "npm install -f",
+    "heroku-postbuild": "npm run prod",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
